// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "black",
      "borderRadius": 0,
      "borderWidth": 1,
      "height": 14,
      "margin": 4,
      "width": 14,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": undefined,
        "borderWidth": 1,
        "height": 8,
        "marginTop": 2,
        "transform": Array [
          Object {
            "rotate": "45deg",
          },
        ],
        "width": 8,
      }
    }
  />
</View>
`;

exports[`Item (with color and fill) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "black",
      "borderRadius": 0,
      "borderWidth": 1,
      "height": 14,
      "margin": 4,
      "width": 14,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 8,
        "marginTop": 2,
        "transform": Array [
          Object {
            "rotate": "45deg",
          },
        ],
        "width": 8,
      }
    }
  />
</View>
`;

exports[`Item (with color) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "black",
      "borderRadius": 0,
      "borderWidth": 1,
      "height": 14,
      "margin": 4,
      "width": 14,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 8,
        "marginTop": 2,
        "transform": Array [
          Object {
            "rotate": "45deg",
          },
        ],
        "width": 8,
      }
    }
  />
</View>
`;

exports[`Item (with fill) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "black",
      "borderRadius": 0,
      "borderWidth": 1,
      "height": 14,
      "margin": 4,
      "width": 14,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": 1,
        "height": 8,
        "marginTop": 2,
        "transform": Array [
          Object {
            "rotate": "45deg",
          },
        ],
        "width": 8,
      }
    }
  />
</View>
`;
